started parallel architecture implementation

--- a/Parallel/parallel_evo_alg.ipynb
+++ b/Parallel/parallel_evo_alg.ipynb
@@ -6,7 +6,31 @@
    "id": "6cbbffd6-af1a-48ec-9e70-44e9cb07f6f6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "%matplotlib inline\n",
+    "\n",
+    "import nengo\n",
+    "from nengo.utils.matplotlib import rasterplot\n",
+    "import nengo_loihi\n",
+    "\n",
+    "# All NengoLoihi models should call this before model construction\n",
+    "nengo_loihi.set_defaults()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b252653f-893d-43fc-8357-cfadf94bb231",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_parallel_network(n_genes = 8):\n",
+    "    model = nengo.Network()\n",
+    "    with model:"
+   ]
   }
  ],
  "metadata": {
