--- a/Parallel/parallel-lava.ipynb
+++ b/Parallel/parallel-lava.ipynb
@@ -16,7 +16,7 @@
     "from lava.magma.core.run_configs import Loihi1SimCfg\n",
     "import numpy as np\n",
     "\n",
-    "num_steps = 40"
+    "num_steps = 10"
    ]
   },
   {
@@ -118,6 +118,93 @@
     "\n",
     "        # Plot the recorded data\n",
     "        monitors[i].plot(ax, neurons[i].u)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "52abd17f",
+   "metadata": {},
+   "source": [
+    "## Evaluation Ensemble"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a017405",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input = []\n",
+    "input.append(get_input_buffer([1,0,0,0,0,0,0,0,0,0]))\n",
+    "input.append(get_input_buffer([0,0,0,0,0,0,0,0,0,0]))\n",
+    "input.append(get_input_buffer([0,0,0,0,0,0,0,0,0,0]))\n",
+    "input.append(get_input_buffer([1,0,0,0,0,0,0,0,0,0]))\n",
+    "input.append(get_input_buffer([0,0,0,0,0,0,0,0,0,0]))\n",
+    "input.append(get_input_buffer([1,0,0,0,0,0,0,0,0,0]))\n",
+    "\n",
+    "input_size = len(input) \n",
+    "\n",
+    "first_layer = []\n",
+    "#Create first layer and connect input to first layer\n",
+    "for i in range(input_size):\n",
+    "    first_layer.append(create_neuron(\"I \" + str(i), threshold=0.999))\n",
+    "    connect_neurons(input[i], first_layer[i], weight=1, delay=0)\n",
+    "\n",
+    "#first layer to ACC\n",
+    "acc = create_neuron('acc', threshold=0.999)\n",
+    "for i in range(int(input_size/2)):\n",
+    "    connect_neurons(first_layer[i], acc, weight=-1, delay=1)\n",
+    "    connect_neurons(first_layer[i+int(input_size/2)], acc, weight=1, delay=1)\n",
+    "\n",
+    "#Create second layer \n",
+    "second_layer_Gi = []\n",
+    "second_layer_Gs = []\n",
+    "for i in range(input_size):\n",
+    "    second_layer_Gi.append(create_neuron(\"Gi \" + str(i), threshold=0.999))\n",
+    "    second_layer_Gs.append(create_neuron(\"Gs \" + str(i), threshold=1.998))\n",
+    "\n",
+    "# Connect ACC and first layer to second layer\n",
+    "for i in range(input_size):\n",
+    "    connect_neurons(acc, second_layer_Gi[i], weight=-1, delay=1)\n",
+    "    connect_neurons(acc, second_layer_Gs[i], weight=1, delay=1)\n",
+    "    connect_neurons(first_layer[i], second_layer_Gi[i], weight=1, delay=2)\n",
+    "    connect_neurons(first_layer[i], second_layer_Gs[i], weight=1, delay=2)\n",
+    "\n",
+    "# Connect second layer to output\n",
+    "output = []\n",
+    "for i in range(input_size):\n",
+    "    output.append(create_neuron(\"O \" + str(i), threshold=0.999))\n",
+    "    connect_neurons(second_layer_Gi[i], output[i], weight=1, delay=1)\n",
+    "\n",
+    "for i in range(int(input_size/2)):\n",
+    "    connect_neurons(second_layer_Gs[i], output[i+int(input_size/2)], weight=1, delay=2)\n",
+    "    connect_neurons(second_layer_Gs[i+int(input_size/2)], output[i], weight=1, delay=2)\n",
+    "\n",
+    "monitor_out = []\n",
+    "for i in range(input_size):\n",
+    "    monitor_out.append(Monitor())\n",
+    "    monitor_out[i].probe(output[i].u, num_steps)\n",
+    "\n",
+    "# run conditions\n",
+    "run_condition = RunSteps(num_steps=num_steps)\n",
+    "run_cfg = Loihi1SimCfg(select_tag=\"floating_pt\")\n",
+    "\n",
+    "# run network and get results\n",
+    "output[0].run(condition=run_condition, run_cfg=run_cfg)\n",
+    "\n",
+    "# plot results\n",
+    "import matplotlib\n",
+    "%matplotlib inline\n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "# Create a subplot for each monitor\n",
+    "fig, axs = plt.subplots(3,2)\n",
+    "\n",
+    "# Plot the recorded data\n",
+    "for i, ax in enumerate(axs.flatten()):\n",
+    "    monitor_out[i].plot(ax, output[i].u)"
    ]
   },
   {
