--- a/Parallel/parallel-lava2.ipynb
+++ b/Parallel/parallel-lava2.ipynb
@@ -504,11 +504,19 @@
     "\n",
     "# run_and_plot([input_neuron[0], second_neuron[0]], input_neuron[0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f884eb77-83fe-4909-89bb-eedda3519f56",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "lava",
    "language": "python",
    "name": "python3"
   },
@@ -522,11 +530,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.15 (main, Nov 24 2022, 14:39:17) [MSC v.1916 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "55d724148d9012090325904023c2cb8323a2d5d6198a22adf5c37728fdd8e824"
+    "hash": "ee77900e32a3de22015cfcbd825608bcc5e7096f3668c17bc86b09b1d4486710"
    }
   }
  },
