--- a/Parallel/parallel-lava2.ipynb
+++ b/Parallel/parallel-lava2.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e59fa6dd",
+   "metadata": {},
+   "source": [
+    "# Import and plots"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "88f6a335",
@@ -374,6 +383,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "b0060d2b",
+   "metadata": {},
+   "source": [
+    "# Evolution"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "cb62faf3",
@@ -465,8 +483,6 @@
     "        \n",
     "        self.evaluated_neurons[0], self.evaluated_neurons[1] = output[0:3], output[3:7]\n",
     "\n",
-    "\n",
-    "\n",
     "    def crossover(self):\n",
     "        crossover = CrossoverEnsemble(self.evaluated_neurons[0], self.evaluated_neurons[1], self.leading_neurons[1])\n",
     "        self.leading_neurons[2], self.crossover_neurons[0], self.crossover_neurons[1] = crossover.get_output_neurons()\n",
@@ -488,30 +504,6 @@
     "E = Evolution([[1,0,1],[1,1,0]])\n",
     "E.evolution_process()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "767bb59f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_buffer = get_input_buffer([1,0])\n",
-    "input_neuron = [create_neuron('n1')]\n",
-    "connect_neurons(input_buffer, input_neuron[0])\n",
-    "second_neuron = [create_neuron('n2')]\n",
-    "connect_neurons(input_neuron[0], second_neuron[0], delay=5)\n",
-    "\n",
-    "# run_and_plot([input_neuron[0], second_neuron[0]], input_neuron[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f884eb77-83fe-4909-89bb-eedda3519f56",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
